k8s-app-workload/base-manifest/base-manifest/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web-pool
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  rollbackWindow:
    revisions: 3
  # workloadRef:
  #   apiVersion: apps/v1
  #   kind: Deployment
  #   name: web-pool
  #   scaleDown: never
  strategy:
    canary:
      # analysis:
      #   args:
      #   - name: stable-hash
      #     valueFrom:
      #       podTemplateHashValue: Stable
      #   - name: canary-hash
      #     valueFrom:
      #       podTemplateHashValue: Latest
      #   - name: component
      #     value: web
      #   - name: instance
      #     value: k8s
      #   - name: managed-by
      #     value: Kustomize
      #   - name: id
      #     value: k8s-web-pool
      #   startingStep: 1
      #   templates:
      #   - templateName: k8s-web-pool-envoy-status-codes
      canaryMetadata:
        labels:
          rollouts.zerodt.com/role: canary
      stableMetadata:
        labels:
          rollouts.zerodt.com/role: stable
      maxSurge: 20%
      maxUnavailable: 20%
      steps:
        - setWeight: 30
        - pause: { duration: 10 }
        - setWeight: 50
        - pause: { duration: 10 }
        - setWeight: 80
        - setWeight: 100
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: tier
                operator: In
                values:
                - ondemand
      tolerations:
      - effect: NoSchedule
        key: dedicated-web
        operator: Equal
        value: "true"
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.zerodt.com/component: web
            app.zerodt.com/instance: k8s
        maxSkew: 1
        # minDomains: 2
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
      initContainers:
      - name: envoy
        image: envoyproxy/envoy:v1.34.6
        restartPolicy: Always
        ports:
        - containerPort: 9211
          name: envoy
          protocol: TCP
        - containerPort: 9901
          name: envoy-admin
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: envoy-admin
          initialDelaySeconds: 1
          periodSeconds: 1
          failureThreshold: 60
        livenessProbe:
          tcpSocket:
            port: envoy-admin
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: envoy-admin
            scheme: HTTP
          periodSeconds: 3
          failureThreshold: 3
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/envoy/
          name: envoy-config-volume
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: WEB_CONCURRENCY
          value: "1"
        image: kosarajus/monolith:v0.1.7
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 8000
          name: app
          protocol: TCP
        startupProbe:
          tcpSocket:
            port: app
          periodSeconds: 1
          failureThreshold: 120
          successThreshold: 1
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - ps aux | grep -E '[f]astapi' -q
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: app
            scheme: HTTP
          failureThreshold: 3
          periodSeconds: 3
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - |
                echo "Sleeping for 60 seconds to allow the app to shutdown gracefully" > /proc/1/fd/1 2>&1;
                sleep 60
        resources:
          limits:
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
      hostAliases:
      - hostnames:
        - webapp
        - envoy
        ip: 127.0.0.1
      terminationGracePeriodSeconds: 600 # we have higher value for this due to nature of long running requests for certain parts of the application
      volumes:
      - name: envoy-config-volume
        configMap:
          name: k8s-envoy-config
