k8s-app-workload/base-manifest/base-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-pool
spec:
  type: ClusterIP
  # type: LoadBalancer
  # externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: envoy
  - name: admin
    port: 9901
    targetPort: envoy-admin
